...
            android:textColor="@color/text_secondary"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/et_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:hint="제목을 입력하세요"
            android:inputType="text"
...
            android:textColor="@color/text_secondary"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/image_container"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/et_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:gravity="top"
            android:hint="오늘의 이야기를 들려주세요."
...
