...
        <RadioButton
            android:id="@+id/rb_mid_right"
            style="@style/EmotionRadioButtonStyle"
            android:background="@drawable/selector_emotion_radio"/>

        <RadioButton
            android:id="@+id/rb_right"
            style="@style/EmotionRadioButtonStyle"
            android:background="@drawable/selector_emotion_radio"/>

    </RadioGroup>


...
