...

        <Space
            android:layout_width="12dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btn_next_or_save"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:text="다음"
            android:textSize="16sp"
            android:textColor="@color/bg"
...
